# Sonar-Mines-vs-Rocks

./: README.md  pyproject.toml
sonar/: finalized_model.sav  sonar.ipynb
